2000-11-10 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTcpPort.m: Added some locking tweaks for writing data.
	* Source/GSString.m: Fix for decoding obsolete string classes.

2000-11-09 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPort.m: ([-setDelegate:]) corrected assertion to allow
	delegate to be set to nil.  Bug reported by cornils@mail.desy.de

2000-11-08 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSString.m: ([GSMutableString substringWithRange:]) fix to
	initialize inline string classes correctly.

2000-11-06  Adam Fedor  <fedor@gnu.org>

	* Documentation: Move tmpl.texi files to texi and update GNUmakefile

Mon Nov  6 16:55:26 2000  Nicola Pero  <n.pero@mi.flashnet.it>

	* Documentation/GNUmakefile: Install ANNOUNCE, NEWS, INSTALL,
	BUGS, README, STATUS into
	Documentation/Developer/Base/ReleaseNotes/$(VERSION); install
	CODING-STANDARDS and coding-standards into
	Documentation/Developer/CodingStandards; install gnustep-base into
	Documentation/Developer/Base/Manual.
	* Documentation/gsdoc/GNUmakefile
	(Base_DOCUMENTATION_INSTALL_DIR): Install gsdoc reference in
	Documentation/Developer/Base/Reference.

2000-11-06 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: handle_printf_atsign() - use lossyCString to
	get string to print.  This is a temporary *HACK* - we need a proper
	unicode supporting initWithFormat:
	* Source/GSString.m: ([GSMutableString substringWithRange:]) fix to
	allocate inline string classes for substrings.

2000-11-04 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSCalendarDate.m ([NSCalendarDate -initWithString:
	calendarFormat:locale:]): try getting timezone by name before
	attempting by abbreviation - thus preserving exact name isf possible.

2000-11-03  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* Source/NSCalendarDate.m ([NSCalendarDate -initWithString:
	calendarFormat:locale:]): assign calendar format.

2000-11-03 Richard Frith-Macdonald <rfm@gnu.org>
