@@ -1,3 +1,8 @@
+2000-11-10  Mirko Viviani  <mirko.viviani@rccr.cremona.it>
+
+	* Source/NSBundle.m ([NSBundle +_addFrameworkFromClass:]): avoid crash
+	when called with Nil class.
+
 2000-11-10 Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/GSTcpPort.m: Added some locking tweaks for writing data.
